--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Chatbot - Powered by Gemini</title>
     <meta name="description" content="Chat with our AI assistant powered by Gemini. Get instant answers to your questions in a beautiful, responsive interface.">
-    <link rel="stylesheet" href="aichatbot.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <div class="container">
@@ -52,6 +52,7 @@
         </main>
     </div>
 
-    <script src="aichatbot.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
